# opsrunbook-copilot

./: .gitignore  Makefile  README.md  pyproject.toml
config/: resource_repo_map.json
docs/: confluence_v1.md  miro_architecture.mmd
infra/terraform/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/actions_runner/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/analyzer/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/coding_agent/: main.tf  outputs.tf  requirements.txt  variables.tf
infra/terraform/modules/collector_logs/: main.tf
infra/terraform/modules/collector_metrics/: main.tf  outputs.tf  variables.tf
scripts/: lint.sh  smoke_it3.sh  smoke_it4.sh  smoke_it5.sh  smoke_it6.sh  test.sh
services/api/: .env.example
services/api/src/: app.py  auth.py  events.py  models.py  sanitize.py  settings.py
services/api/tests/: test_evidence_utils.py  test_models.py
services/collectors/: pyproject.toml
services/collectors/src/collectors/: __init__.py
services/collectors/src/collectors/cloudwatch/: __init__.py  insights_client.py  metrics_client.py  queries.py
services/collectors/src/collectors/stepfunctions/: __init__.py  sfn_client.py
services/collectors/tests/: Untitled  test_metrics_client.py  test_queries.py  test_sfn_client.py
tests/: test_actions.py  test_incident_packet.py  test_repo_resolver.py  test_webhook.py
tests/fixtures/: payment_gateway_timeout.json  sample_logs_evidence.json  sample_manifest.json  sample_metrics_evidence.json  sample_packet.json
(+51 files in other folders)
